Timeline Word overlap fix

--- a/styles.css
+++ b/styles.css
@@ -381,7 +381,7 @@ body{
   padding: 30px 90px 30px 30px;
   background: lightgrey;
   position: relative;
-  border-radius: 0 500px 500px 0;
+  border-radius: 100px 100px 100px 100px;
   border-style:double;
   border-width:thick;
   border-color: #006E51;
@@ -389,7 +389,7 @@ body{
 
 .container.right .content {
   padding: 30px 30px 30px 90px;
-  border-radius: 500px 0 0 500px;
+  border-radius: 100px 100px 100px 100px;
 }
 
 .container .content h2 {
@@ -451,6 +451,6 @@ body{
   .container.right .content {
     left: 25%;
     padding: 30px 30px 30px 90px;
-    border-radius: 100px 0 0 100px;
+    border-radius: 100px 100px 100px 100px;
   }
 }
